# krpc-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/krpc_mcp/: __init__.py  server.py
